sugar/tests/success/layout_via.mx
u : _|_ | _|_ |-
connect u via
    a -> a
    b -> b
