sugar/tests/fail/context.mx
a : _|_, b : _|_ |- a
